Bug 1078005 - Skip sending MozAfterPaint events to hidden PresShells. r=roc